Changelog:

21 November 2020:
	Destruction Warlock:
		Added Drain Life and Health Funnel for HP % sliders.

	Demonology Warlock:
		Initial build.

	Frost DK:
		Added Death Strike with HP slider.

	Unholy DK:
		Added Death Strike with HP slider.	
		
	Shadow Priest:
		Fixed Searing Nightmare.
		
	Retribution Paladin:
		Divine Storm fix with Crusade talent.