@@ -18,3 +18,15 @@ Changelog:
 		
 	Retribution Paladin:
 		Divine Storm fix with Crusade talent.
+		Changed Neck binding to Regeneratin'.
+		
+		
+22 November 2020:
+	Holy Priest:
+		Solo rotation - should be good for Torghast in early weeks
+	
+	Demonology Warlock:
+		Now hitting simmed DPS.
+		
+	Havoc Demon Hunter:
+		Glaive Tempest will now be used in single target if target is boss.
